# Video360OpenGL

./: CMakeLists.txt  H264_Decoder.cpp  H264_Decoder.h  LICENSE  README.md  YUV420P_Player.cpp  YUV420P_Player.h  config.cpp  config.h  config.txt  main.cpp  tinylib.h
CMakeModules/: FindFFmpeg.cmake  FindThreads.cmake
shaders/: dist_fragment_shader.glsl  dist_vertex_shader.glsl  video_fragment_shader.glsl  video_vertex_shader.glsl
